syntax = "proto3";

package blockscout.smartContractVerifier.v2.zksync.solidity;

//import "v2/zksync.proto";

option go_package = "github.com/blockscout/blockscout-rs/smart-contract-verifier/zksync/solidity";

service Verifier {
  rpc VerifyStandardJson(VerifyStandardJsonRequest) returns (VerifyResponse) {}

  rpc ListCompilers(ListCompilersRequest) returns (ListCompilersResponse) {}
}

message VerifyStandardJsonRequest {
  string code = 1;
  optional string constructor_arguments = 2;
  string zk_compiler = 3;
  string solc_compiler = 4;
  string input = 5;
}

message CompilationFailure {
  string message = 1;
}

message VerificationFailure {
  string message = 1;
}

message VerificationSuccess {

}

message VerifyResponse {
  oneof verify_response {
    CompilationFailure compilation_failure = 1;
    VerificationFailure verification_failure = 2;
    VerificationSuccess verification_success = 3;
  }
}

message ListCompilersRequest {}

message ListCompilersResponse {
  repeated string zk_compilers = 1;
  repeated string solc_compilers = 2;
}